Update and rename Home 2.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!--the above link is must for social media icon within i tag-->
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
