Modified to Old

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <h2> <span> Courses </span> </h2>
             <div class="carousel"
             data-flickity='{ "wrapAround": true }'>
-            <div class="carousel-cell"><video src="/Video/Lady Antebellum - I Did With You ( 1080 X 1920 ).mp4" controls loop muted poster="Image/Poster 1.jpg" >This is a video</video></div>
-            <div class="carousel-cell"><video src="/Video/Maan Meri Jaan _ Official Music Video _ Champagne Talk _ King_1080p.mp4" controls loop muted poster="Image/Poster 2.jpg" >This is a video</video></div>
-            <div class="carousel-cell"><video src="/Video/Mayasena  OMG  Sunny Leone  Sathish  Yogi Babu  R Yuvan  VAU Media ENT  White Horse Studios_1080p.mp4" controls loop muted poster="Image/Poster 3.jpg" >This is a video</video></div>
-            <div class="carousel-cell"><video src="/Video/Becky G, Natti Natasha - Sin Pijama (Official Video)_1080p.mp4" controls loop muted poster="Image/Poster 4.jpg" >This is a video</video></div>
-            <div class="carousel-cell"><video src="/Video/Caller Tune  Humshakals  Saif Ali Khan Tamannaah Bipasha Basu Riteish Deshmukh Neeraj Shridhar_1080p.mp4.webm" controls loop muted poster="Image/Poster 5.jpg" >This is a video</video></div>
-            <div class="carousel-cell"><video src="/Video/Bhool Bhulaiyaa Title Track (Full Video) _ Akshay Kumar, Vidya Balan _ Neeraj Shridhar _ Pritam.mp4" controls loop muted poster="Image/Poster 6.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Lady Antebellum - I Did With You ( 1080 X 1920 ).mp4" controls loop muted poster="Image/Poster 1.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Maan Meri Jaan _ Official Music Video _ Champagne Talk _ King_1080p.mp4" controls loop muted poster="Image/Poster 2.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Mayasena  OMG  Sunny Leone  Sathish  Yogi Babu  R Yuvan  VAU Media ENT  White Horse Studios_1080p.mp4" controls loop muted poster="Image/Poster 3.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Becky G, Natti Natasha - Sin Pijama (Official Video)_1080p.mp4" controls loop muted poster="Image/Poster 4.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Caller Tune  Humshakals  Saif Ali Khan Tamannaah Bipasha Basu Riteish Deshmukh Neeraj Shridhar_1080p.mp4.webm" controls loop muted poster="Image/Poster 5.jpg" >This is a video</video></div>
+            <div class="carousel-cell"><video src="Video/Bhool Bhulaiyaa Title Track (Full Video) _ Akshay Kumar, Vidya Balan _ Neeraj Shridhar _ Pritam.mp4" controls loop muted poster="Image/Poster 6.jpg" >This is a video</video></div>
             </div>    
         </section>
         <section>
